@@ -17,4 +17,6 @@ AC_CONFIG_LINKS([
   include/bits/atomic.h:platform/${arch}/bits/atomic.h
   include/bits/wordsize.h:platform/${arch}/bits/wordsize.h
   include/compiler.h:platform/compiler.h
+  include/endian.h:platform/endian.h
+  include/bits/endian.h:platform/${arch}/bits/endian.h
 ])
